syntax = "proto3";
package api;
option go_package = "./api";

service LinkService {
  // создание короткой ссылки
  rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse);
  // получение оригинальной ссылки
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse);
}

message CreateLinkRequest {
  string original_url = 1;
}

message CreateLinkResponse {
  string short_url = 1;
}

message GetLinkRequest {
  string short_url = 1;
}

message GetLinkResponse {
  string original_url = 1;
}